# fastapi-docker-traefik

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
app/: main.py
